[project]
name = "hardy-ls"
version = "0.1.0"
description = "A lightweight local search framework for combinatorial optimization"
readme = "README.md"
authors = [
    { name = "atsuhiro", email = "jhuim08@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "polars>=1.38.1",
]

[project.scripts]
hardy-ls = "hardy_ls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "plotly>=6.5.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
